1.2.0.1:
    - Fixed compile warnings in Raspbian Buster.

1.2.0:
    - Added support for the MCC 134.
    - Fixed conflict with libi2c-dev.

1.1.0.3:
    - Cleared up some memory allocation errors reported by valgrind.
    - Set the value returned by open functions when trying to open the 
    wrong type of board to RESULT_INVALID_DEVICE (or an appropriate 
    exception message in Python.)
    - Fixed an issue with dash dependency in the MCC 118 web_server Python
    example.
    - Fixed an issue with segmentation faults when calling mcc118_open() after
    changing the locale.

1.1.0.2:
    - Fixed an issue with high CPU usage when waiting for a trigger on the
    MCC 118 - updated both library and trigger examples.
    - Lowered the max SPI clock rate for the MCC 118 to fix communications 
    issues on some systems.
    - Fixed an issue with MCC 152 DIO interrupt callbacks in Python when
    running a scan on a separate MCC 118
    
1.1.0.1: 
    - Fixed an issue with resource conflicts when using multiple threads in
    the same process (such as using multiple MCC 118s.)

1.1.0: 
    - Added support for the MCC 152.

1.0.0:
    - Initial release for the MCC 118.